// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`no-misused-new не ошибки индекс теста: 0 1`] = `Array []`;

exports[`no-misused-new не ошибки индекс теста: 1 1`] = `Array []`;

exports[`no-misused-new ошибки индекс теста: 0 1`] = `
Array [
  Object {
    "column": 5,
    "endColumn": 14,
    "endLine": 2,
    "line": 2,
    "message": "Class cannot have method named \`new\`.",
    "messageId": "errorMessageClass",
    "nodeType": "MethodDefinition",
    "ruleId": "@typescript-eslint/no-misused-new",
    "severity": 2,
  },
]
`;

exports[`no-misused-new ошибки индекс теста: 1 1`] = `
Array [
  Object {
    "column": 5,
    "endColumn": 15,
    "endLine": 2,
    "line": 2,
    "message": "Interfaces cannot be constructed, only classes.",
    "messageId": "errorMessageInterface",
    "nodeType": "TSConstructSignatureDeclaration",
    "ruleId": "@typescript-eslint/no-misused-new",
    "severity": 2,
  },
  Object {
    "column": 5,
    "endColumn": 25,
    "endLine": 3,
    "line": 3,
    "message": "Interfaces cannot be constructed, only classes.",
    "messageId": "errorMessageInterface",
    "nodeType": "TSMethodSignature",
    "ruleId": "@typescript-eslint/no-misused-new",
    "severity": 2,
  },
]
`;
